--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
                     <div class="bl-count">
                         <button class="bl-minus">-</button>
-                        <span class="bl-label">3</span>
+                        <span class="bl-label">1</span>
                         <button class="bl-plus">+</button>
                     </div>
 
@@ -56,7 +56,16 @@
         <div class="bl-containerRight">
             <div class="bl-bought">
                 <div class="bl-title">Залишилося</div>
-                <div class="bl-leave"></div>                    
+                <div class="bl-leave">
+                    <span class="bl-item">
+                        Помідори
+                        <span class="bl-amount">3</span>
+                    </span>
+                    <span class="bl-item">
+                        Огірки
+                        <span class="bl-amount">1</span>
+                    </span>
+                </div>                    
                 <div class="bl-title">Куплене</div>
                 <div class="bl-bb"></div>   
             </div>
