--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
         <div class="bl-containerLeft">
             
             <div class="bl-input">
-                <input	type="text" placeholder="Назва товару" size="50px">
+                <input	type="text" placeholder="Назва товару">
                 <button class="bl-add">Додати</button>                                       
             </div>
 
             <div class="bl-list">
                 
-                <div class="bl-row">
+                <div class="bl-row missing">
                     <div class="bl-product">
                         <span >Перець</span>
                     </div>
@@ -74,7 +74,12 @@
                 </span>
             </div>                    
             <div class="bl-title"><b>Куплене</b></div>
-            <div class="bl-bb"></div>   
+            <div class="bl-bb">
+                <span class="bl-item">
+                    <s>Перець</s>
+                    <span class="bl-amount">2</span>
+                </span>
+            </div>   
         </div>
     </div>
 </body>
